--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,23 @@
         </plugins>
     </build>
 
+    <dependencyManagement>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependencies>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.16.18</version>
+                <scope>provided</scope>
+            </dependency>
+        </dependencies>
+
+    </dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
